--- a/css/main.css
+++ b/css/main.css
@@ -38,13 +38,29 @@ h2 {
   margin: auto;
 }
 
+@media screen and (min-width: 992px) {
+  .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    height: 100vh;
+  }
+}
+
 .main {
   padding: 3rem 2rem;
 }
 
 @media screen and (min-width: 992px) {
   .main {
-    padding: 2rem;
+    padding: 3rem 1rem;
   }
 }
 
@@ -67,14 +83,13 @@ h2 {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    margin: 1rem 0;
+    margin: 3rem 0;
   }
 }
 
 .main .hero-container .hero-img {
   max-width: 700px;
   padding: 3rem 0;
-  margin: auto;
   -webkit-animation: down 1s ease-out;
           animation: down 1s ease-out;
 }
@@ -146,7 +161,7 @@ h2 {
 
 footer {
   max-width: 1440px;
-  margin: auto;
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -161,6 +176,7 @@ footer {
 
 @media screen and (min-width: 992px) {
   footer {
+    width: 100%;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: reverse;
         -ms-flex-direction: row-reverse;
@@ -168,7 +184,9 @@ footer {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    padding: 0 3rem;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+    padding: 0 1rem;
   }
 }
 
