--- a/scss/main.scss
+++ b/scss/main.scss
@@ -44,12 +44,18 @@ h2 {
 .container {
   max-width: 1440px;
   margin: auto;
+  @include media-lg {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+  }
 }
 
 .main {
   padding: 3rem 2rem;
   @include media-lg {
-    padding: 2rem;
+    padding: 3rem 1rem;
   }
 
   .logo {
@@ -65,13 +71,12 @@ h2 {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin: 1rem 0;
+      margin: 3rem 0;
     }
 
     .hero-img {
       max-width: 700px;
       padding: 3rem 0;
-      margin: auto;
       animation: down 1s ease-out;
       @include media-lg {
         animation: right 1s ease-out;
@@ -129,14 +134,16 @@ h2 {
 
 footer {
   max-width: 1440px;
-  margin: auto;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   @include media-lg {
+    width: 100%;
     flex-direction: row-reverse;
     justify-content: space-between;
-    padding: 0 3rem;
+    align-self: flex-end;
+    padding: 0 1rem;
   }
 
   .social-icons {
